# BillaBee

./: .coolify  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: action.py  app.py  calendar_service.py  calendar_tool.py  constants.py  context.py  models.py  setup_credentials.py  user_profile.json.example
app/static/: script.js  style.css
app/templates/: index.html
backend/app/: app.py
frontend/: index.html  script.js  style.css  styles.css
