[project]
name = "billabee"
version = "0.1.0"
description = "BillaBee - AI-powered personal calendar assistant"
authors = [
    {name = "martinaroi", email = "maroithmeier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.178.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "flask>=3.1.1,<4.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "openai>=1.99.5,<2.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "flask-cors>=6.0.1,<7.0.0",
    "uritemplate>=4.2.0,<5.0.0",
    "python-dateutil>=2.8.0",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
